--- a/.zimrc
+++ b/.zimrc
@@ -40,6 +40,7 @@ zmodule zsh-users/zsh-syntax-highlighting
 # zsh-users/zsh-history-substring-search must be sourced after zsh-users/zsh-syntax-highlighting
 zmodule zsh-users/zsh-history-substring-search
 
+zmodule rupa/z
 zmodule exa
 zmodule fzf
 zmodule archive
