--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -24,7 +24,7 @@ $character"""
 right_format = """$aws"""
 
 [character]
-success_symbol = "[❯](5)"
+success_symbol = "[❯](purple)"
 error_symbol = "[❯](red)"
 vicmd_symbol = "[❮](green)"
 
@@ -36,22 +36,22 @@ style = "blue"
 
 [git_branch]
 format = "[$branch]($style)"
-style = "242"
+style = " "
 
 [git_status]
-format = "[[$conflicted$deleted$renamed$modified$untracked](218) $ahead_behind$stashed]($style)"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
 style = "cyan"
-diverged = "*"
-untracked = "*"
-modified = "*"
-staged = "*"
-renamed = "*"
-deleted = "*"
+conflicted = "​"
+untracked = "​"
+modified = "​"
+staged = "​"
+renamed = "​"
+deleted = "​"
 stashed = "≡"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "242"
+style = "bright-black"
 
 [cmd_duration]
 format = "[$duration]($style) "
