--- a/.zimrc
+++ b/.zimrc
@@ -1,11 +1,15 @@
 #!/usr/bin/env zsh
 
-# -------
-# Modules
-# -------
+#
+# This is not sourced during shell startup, and it's only used to configure the
+# zimfw plugin manager.
+#
 
 # Sets sane Zsh built-in environment options.
 zmodule environment
+
+# Provides handy git aliases and functions.
+zmodule git
 
 # Applies correct bindkeys for input events.
 zmodule input
@@ -16,21 +20,23 @@ zmodule termtitle
 # Utility aliases and functions. Adds colour to ls, grep and less.
 zmodule utility
 
-#
-# Prompt
-#
-
-# zmodule sindresorhus/pure --source async.zsh --source pure.zsh
-
 # Additional completion definitions for Zsh.
-zmodule zsh-users/zsh-completions
+zmodule zsh-users/zsh-completions --fpath src
 
 # Enables and configures smart and extensive tab completion.
-# completion must be sourced after zsh-users/zsh-completions
+# completion must be sourced after all modules that add completion definitions.
 zmodule completion
 
-# Fish-like autosuggestions for Zsh.
-zmodule zsh-users/zsh-autosuggestions
+zmodule joke/zim-starship
+zmodule zdharma-continuum/history-search-multi-word
+zmodule exa
+zmodule archive
+zmodule magic-enter
+zmodule skywind3000/z.lua --cmd 'eval "$(lua {}/z.lua --init zsh enhanced)"'
+
+#
+# Modules that must be initialized last
+#
 
 # Fish-like syntax highlighting for Zsh.
 # zsh-users/zsh-syntax-highlighting must be sourced after completion
@@ -40,13 +46,5 @@ zmodule zsh-users/zsh-syntax-highlighting
 # zsh-users/zsh-history-substring-search must be sourced after zsh-users/zsh-syntax-highlighting
 zmodule zsh-users/zsh-history-substring-search
 
-zmodule rupa/z
-zmodule exa
-zmodule fzf
-zmodule archive
-
-zmodule zdharma/history-search-multi-word
-
-# Not sure about this one…
-# zmodule MenkeTechnologies/zsh-expand
-zmodule MichaelAquilina/zsh-you-should-use --source you-should-use.plugin.zsh
+# Fish-like autosuggestions for Zsh.
+zmodule zsh-users/zsh-autosuggestions
