--- a/.zimrc
+++ b/.zimrc
@@ -32,7 +32,11 @@ zmodule exa
 zmodule archive
 
 # Currently uzing fre+fzf instead of this
-# zmodule skywind3000/z.lua --cmd 'eval "$(lua {}/z.lua --init zsh enhanced)"'
+zmodule skywind3000/z.lua --cmd 'eval "$(lua {}/z.lua --init zsh enhanced)"'
+
+# https://github.com/Aloxaf/fzf-tab
+# TODO: get ls colors working
+zmodule Aloxaf/fzf-tab
 
 #
 # Modules that must be initialized last
